args for next metal run

--- a/metal/roles/k3s/templates/config.yaml.j2
+++ b/metal/roles/k3s/templates/config.yaml.j2
@@ -7,3 +7,6 @@ token-file: {{ k3s_token_file }}
 {% if 'masters' in group_names %}
 {{ k3s_server_config | to_nice_yaml }}
 {% endif %}
+{% if 'workers' in group_names %}
+{{ k3s_agent_config | to_nice_yaml }}
+{% endif %}
